--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="icon" href="./images/launcher_icon.png" />
     <title>Landing Page</title>
-    <meta name="title" content=" Audio - Have Deeper Conversations" />
+    <meta name="title" content="10 minute english -  E master" />
     <meta name="description"
-        content=" Audio brings you closer to your friends through deep, podcast-like conversations, letting you connect meaningfully on your time." />
+        content="Learn 30000+ english words in 100+ topics" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content=" Audio - Have Deeper Conversations" />
     <meta property="og:description"
@@ -144,7 +144,7 @@
                                     <div class="col-6 col-md-4 mb-4">
                                         <div class="Cards_use_case_card__qLRwO h-100">
                                             <div class="text-center p-3"><img alt="Icon image related to the use case"
-                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="/images/icons/note.svg" />
+                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="./images/icons/note.svg" />
                                                 <div class="mt-4">
                                                     <h6>Better understanding through YouTube videos and stories</h6>
                                                 </div>
@@ -154,7 +154,7 @@
                                     <div class="col-6 col-md-4 mb-4">
                                         <div class="Cards_use_case_card__qLRwO h-100">
                                             <div class="text-center p-3"><img alt="Icon image related to the use case"
-                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="/images/icons/chat.svg" />
+                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="./images/icons/chat.svg" />
                                                 <div class="mt-4">
                                                     <h6>30000+ English words in 100+ topics</h6>
                                                 </div>
@@ -164,7 +164,7 @@
                                     <div class="col-6 col-md-4 mb-4">
                                         <div class="Cards_use_case_card__qLRwO h-100">
                                             <div class="text-center p-3"><img alt="Icon image related to the use case"
-                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="/images/icons/book.svg" />
+                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="./images/icons/book.svg" />
                                                 <div class="mt-4">
                                                     <h6>Learn how to use the word correctly and effectively</h6>
                                                 </div>
@@ -174,7 +174,7 @@
                                     <div class="col-6 col-md-4 mb-4">
                                         <div class="Cards_use_case_card__qLRwO h-100">
                                             <div class="text-center p-3"><img alt="Icon image related to the use case"
-                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="/images/icons/lecture.svg" />
+                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="./images/icons/lecture.svg" />
                                                 <div class="mt-4">
                                                     <h6>Read and answer questions to gain a deeper understanding of the stories</h6>
                                                 </div>
@@ -184,7 +184,7 @@
                                     <div class="col-6 col-md-4 mb-4">
                                         <div class="Cards_use_case_card__qLRwO h-100">
                                             <div class="text-center p-3"><img alt="Icon image related to the use case"
-                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="/images/icons/team.svg" />
+                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="./images/icons/team.svg" />
                                                 <div class="mt-4">
                                                     <h6>Have easy conversations with our AI to improve your conversational skills</h6>
                                                 </div>
@@ -194,7 +194,7 @@
                                     <div class="col-6 col-md-4 mb-4">
                                         <div class="Cards_use_case_card__qLRwO h-100">
                                             <div class="text-center p-3"><img alt="Icon image related to the use case"
-                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="/images/icons/podcast.svg" />
+                                                    loading="lazy" width="75" height="75" decoding="async" data-nimg="1" style="color:transparent" src="./images/icons/podcast.svg" />
                                                 <div class="mt-4">
                                                     <h6>Search for your best-fit YouTube videos</h6>
                                                 </div>
@@ -213,7 +213,7 @@
                                             <div class="p-4 pb-2 flex-grow-1">
                                                 <div class="text-center"><img alt="Five Star Review Rating"
                                                         loading="lazy" width="208" height="38" decoding="async"
-                                                        data-nimg="1" style="color:transparent" src="/images/fiveStar.svg" /></div>
+                                                        data-nimg="1" style="color:transparent" src="./images/fiveStar.svg" /></div>
                                                 <div class="mt-4 flex-grow-1">
                                                     <p> App đa dạng , giao diện dễ dùng. Mong nhà phát triển có thêm nhiều tính năng mới hơn nữa:)
                                                     </p>
@@ -227,7 +227,7 @@
                                             <div class="p-4 pb-2 flex-grow-1">
                                                 <div class="text-center"><img alt="Five Star Review Rating"
                                                         loading="lazy" width="208" height="38" decoding="async"
-                                                        data-nimg="1" style="color:transparent" src="/images/fiveStar.svg" /></div>
+                                                        data-nimg="1" style="color:transparent" src="./images/fiveStar.svg" /></div>
                                                 <div class="mt-4 flex-grow-1">
                                                     <p>App có nhiều tính năng miễn phí như tất cả truyện đều được nghe free với phần nội dung trình bày rõ ràng, đầy đủ
                                                     </p>
@@ -241,7 +241,7 @@
                                             <div class="p-4 pb-2 flex-grow-1">
                                                 <div class="text-center"><img alt="Five Star Review Rating"
                                                         loading="lazy" width="208" height="38" decoding="async"
-                                                        data-nimg="1" style="color:transparent" src="/images/fiveStar.svg" /></div>
+                                                        data-nimg="1" style="color:transparent" src="./images/fiveStar.svg" /></div>
                                                 <div class="mt-4 flex-grow-1">
                                                     <p>App hay, siêu bổ ích luôn. Nhìn ít người tải mà uy tín ghê.</p>
                                                 </div>
@@ -254,7 +254,7 @@
                                             <div class="p-4 pb-2 flex-grow-1">
                                                 <div class="text-center"><img alt="Five Star Review Rating"
                                                         loading="lazy" width="208" height="38" decoding="async"
-                                                        data-nimg="1" style="color:transparent" src="/images/fiveStar.svg" /></div>
+                                                        data-nimg="1" style="color:transparent" src="./images/fiveStar.svg" /></div>
                                                 <div class="mt-4 flex-grow-1">
                                                     <p>khá thú vị, tôi có thể chọn vào câu chuyện mà mình muốn nghe, sau đó nghe như 1 podcast, mặc dù có eng sub, nhưng tôi thích nghe nó như là 1 podcast. rất tiện lợi cho người mới học tiếng anh như tôi
                                                     </p>
@@ -268,7 +268,7 @@
                                             <div class="p-4 pb-2 flex-grow-1">
                                                 <div class="text-center"><img alt="Five Star Review Rating"
                                                         loading="lazy" width="208" height="38" decoding="async"
-                                                        data-nimg="1" style="color:transparent"src="/images/fiveStar.svg" /></div>
+                                                        data-nimg="1" style="color:transparent"src="./images/fiveStar.svg" /></div>
                                                 <div class="mt-4 flex-grow-1">
                                                     <p>App dễ dùng dễ hiểu, mọi người Lên tải nhé
                                                     </p>
@@ -282,7 +282,7 @@
                                             <div class="p-4 pb-2 flex-grow-1">
                                                 <div class="text-center"><img alt="Five Star Review Rating"
                                                         loading="lazy" width="208" height="38" decoding="async"
-                                                        data-nimg="1" style="color:transparent"src="/images/fiveStar.svg" /></div>
+                                                        data-nimg="1" style="color:transparent"src="./images/fiveStar.svg" /></div>
                                                 <div class="mt-4 flex-grow-1">
                                                     <p>Até o momento parece ser ótimo</p>
                                                 </div>
