--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Landing Page</title>
     <meta name="title" content="10 minute english -  E master" />
     <meta name="description"
-        content="Learn 30000+ english words in 100+ topics" />
+        content="Learn 30000+ English words in 100+ topics" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content=" Audio - Have Deeper Conversations" />
+    <meta property="og:title" content="10 minute English -  E master" />
     <meta property="og:description"
-        content=" Audio brings you closer to your friends through deep, podcast-like conversations, letting you connect meaningfully on your time." />
+        content="Learn 30000+ English words in 100+ topics" />
     <meta name="twitter:card" content="app" />
     <meta name="twitter:app:name:iphone" content="" />
     <meta name="twitter:app:id:iphone" content="6443961864" />
