--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 <a target="_blank"class="btn btn-link" href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Terms</a>
                 <span>|</span>
                 <a class="btn btn-link" href="mailto: Audio&lt;dave@audio.com&gt;">Contact</a>
-                <p>Copyright © <!-- -->2024<!-- -->, 1ManStartup LLC. All Rights Reserved.</p>
+                <p>Copyright © <!-- -->2024<!-- -->. All Rights Reserved.</p>
             </div>
         </div>
     </div>
