--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
                         <div class="text-center">
                             <h2 class="h2-lg my-lg my-lg">Watch The Demo</h2><iframe class="youtube-video"
-                                src="https://youtu.be/hkvLgvhWXXk"
+                                src="https://www.youtube.com/embed/hkvLgvhWXXk"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 loading="eager"></iframe>
                         </div>
