--- a/index.html
+++ b/index.html
@@ -294,116 +294,72 @@
                             </div>
                         </div>
                         <div id="Home_section_faq___Aho8">
-                            <h2 class="h2-lg my-lg text-center">FAQ&#x27;s</h2>
-                            <div class="row justify-content-center">
-                                <div class="col-10 col-md-8 col-lg-6">
-                                    <div class="accordion" id="faq_accordion">
-                                        <div class="accordion-item">
-                                            <h2 class="h2-lg accordion-header" id="heading_one">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_one"
-                                                    aria-expanded="false" aria-controls="collapse_one">How do I start a conversation on ?
-                                                </button>
-                                            </h2>
-                                            <div id="collapse_one" class="accordion-collapse collapse" aria-labelledby="heading_one" data-bs-parent="#faq_accordion">
-                                                <div class="accordion-body">You simply hit record in the app and start
-                                                    talking. After you finish recording you can add a title and share
-                                                    your recording in a channel so others can listen.
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="h2-lg accordion-header" id="heading_two">
-                                                <button class="accordion-button collapsed" type="button"
-                                                    data-bs-toggle="collapse" data-bs-target="#collapse_two"
-                                                    aria-expanded="false" aria-controls="collapse_two">Who can join my channels?
-                                                </button>
-                                            </h2>
-                                            <div id="collapse_two" class="accordion-collapse collapse"
-                                                aria-labelledby="heading_two" data-bs-parent="#faq_accordion">
-                                                <div class="accordion-body">Channels can be joined by anyone the channel
-                                                    owner chooses. If you are friends with someone on  you can add
-                                                    them to a channel automatically, if not you can send them a channel
-                                                    invite link. The channel owner controls who is in the channel.</div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="h2-lg accordion-header" id="heading_three">
-                                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_three"
-                                                    aria-expanded="false" aria-controls="collapse_three">How do I listen
-                                                    to comments that have been added to a conversation?
-                                                </button>
-                                            </h2>
-                                            <div id="collapse_three" class="accordion-collapse collapse" aria-labelledby="heading_three" data-bs-parent="#faq_accordion">
-                                                <div class="accordion-body">When listening to a conversation if there is
-                                                    a comment, you&#x27;ll have to option to take the road and listen to
-                                                    the comment. If you decide to listen, when the comment completes
-                                                    playing the original conversation will continue.
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="h2-lg accordion-header" id="heading_four">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_four"
-                                                    aria-expanded="false" aria-controls="collapse_four">What is the
-                                                    maximum recording length?
-                                                </button>
-                                            </h2>
-                                            <div id="collapse_four" class="accordion-collapse collapse"
-                                                aria-labelledby="heading_four" data-bs-parent="#faq_accordion">
-                                                <div class="accordion-body">Conversations and comments can be any length. </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="h2-lg accordion-header" id="heading_five">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_five"
-                                                    aria-expanded="false" aria-controls="collapse_five">Can I edit or
-                                                    delete my recordings?
-                                                </button>
-                                            </h2>
-                                            <div id="collapse_five" class="accordion-collapse collapse" aria-labelledby="heading_five" data-bs-parent="#faq_accordion">
-                                                <div class="accordion-body">There will be no support for editing audio
-                                                    in the initial version. However, you can always delete a recording
-                                                    that you create.
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="h2-lg accordion-header" id="heading_seven">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_seven"
-                                                    aria-expanded="false" aria-controls="collapse_seven">Does the app
-                                                    offer a free trial or a freemium version?
-                                                </button>
-                                            </h2>
-                                            <div id="collapse_seven" class="accordion-collapse collapse" aria-labelledby="heading_seven" data-bs-parent="#faq_accordion">
-                                                <div class="accordion-body"> will always have a free version where
-                                                    all the core features will be available. Premium features will also
-                                                    be made available for a small fee.
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="accordion-item">
-                                            <h2 class="h2-lg accordion-header" id="heading_eight">
-                                                <button class="accordion-button collapsed" type="button"
-                                                    data-bs-toggle="collapse" data-bs-target="#collapse_eight"
-                                                    aria-expanded="false" aria-controls="collapse_eight">How can I
-                                                    delete my account and data?
-                                                </button>
-                                            </h2>
-                                            <div id="collapse_eight" class="accordion-collapse collapse"
-                                                aria-labelledby="heading_eight" data-bs-parent="#faq_accordion">
-                                                <div class="accordion-body">
-                                                    <span>Within the app you can find a
-                                                        <strong>Delete Account</strong> link under settings which will
-                                                        delete your account and all related data. For full instructions
-                                                        <a href="/delete-account">view this page.</a>
-                                                    </span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+    <h2 class="h2-lg my-lg text-center">FAQs</h2>
+    <div class="row justify-content-center">
+        <div class="col-10 col-md-8 col-lg-6">
+            <div class="accordion" id="faq_accordion">
+                <!-- How to start a conversation with AI -->
+                <div class="accordion-item">
+                    <h2 class="h2-lg accordion-header" id="heading_one">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_one"
+                            aria-expanded="false" aria-controls="collapse_one">How do I start a conversation with the AI?
+                        </button>
+                    </h2>
+                    <div id="collapse_one" class="accordion-collapse collapse" aria-labelledby="heading_one" data-bs-parent="#faq_accordion">
+                        <div class="accordion-body">To start a conversation with the AI, simply press the microphone icon for voice interaction or type your message in the chat window for text communication.</div>
+                    </div>
+                </div>
+                <!-- How to use the story reader feature -->
+                <div class="accordion-item">
+                    <h2 class="h2-lg accordion-header" id="heading_two">
+                        <button class="accordion-button collapsed" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapse_two"
+                            aria-expanded="false" aria-controls="collapse_two">How can I read and listen to stories on the app?
+                        </button>
+                    </h2>
+                    <div id="collapse_two" class="accordion-collapse collapse"
+                        aria-labelledby="heading_two" data-bs-parent="#faq_accordion">
+                        <div class="accordion-body">Access the 'Stories' section, choose a story, and press play. The text will be highlighted as it is read aloud. You can pause and look up any words directly in the app.</div>
+                    </div>
+                </div>
+                <!-- Vocabulary storage and review -->
+                <div class="accordion-item">
+                    <h2 class="h2-lg accordion-header" id="heading_three">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_three"
+                            aria-expanded="false" aria-controls="collapse_three">How do I save vocabulary for review?
+                        </button>
+                    </h2>
+                    <div id="collapse_three" class="accordion-collapse collapse" aria-labelledby="heading_three" data-bs-parent="#faq_accordion">
+                        <div class="accordion-body">After looking up a word, click the 'Save Word' button to add it to your personal vocabulary list for later review.</div>
+                    </div>
+                </div>
+                <!-- Accessing vocabulary topics -->
+                <div class="accordion-item">
+                    <h2 class="h2-lg accordion-header" id="heading_four">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_four"
+                            aria-expanded="false" aria-controls="collapse_four">How can I learn vocabulary from different topics?
+                        </button>
+                    </h2>
+                    <div id="collapse_four" class="accordion-collapse collapse"
+                        aria-labelledby="heading_four" data-bs-parent="#faq_accordion">
+                        <div class="accordion-body">The app provides 30,000 vocabulary words across 100 topics. Visit the 'Vocabulary' section and select your topic of interest to start learning.</div>
+                    </div>
+                </div>
+                <!-- Watching videos with translated captions -->
+                <div class="accordion-item">
+                    <h2 class="h2-lg accordion-header" id="heading_five">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_five"
+                            aria-expanded="false" aria-controls="collapse_five">How do I watch YouTube videos with captions and translations?
+                        </button>
+                    </h2>
+                    <div id="collapse_five" class="accordion-collapse collapse" aria-labelledby="heading_five" data-bs-parent="#faq_accordion">
+                        <div class="accordion-body">In the 'Video' section, choose a video to watch. Enable 'Show Captions' and 'Translate Captions' to view and translate the subtitles.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
                         <div id="Home_section_wait_list__UeYSC">
                             <h2 class="h2-lg my-lg text-center text-primary">Do More With Your Voice</h2>
                             <div class="my-3 mx-auto text-center">
@@ -428,7 +384,7 @@
                 <span>|</span>
                 <a target="_blank"class="btn btn-link" href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Terms</a>
                 <span>|</span>
-                <a class="btn btn-link" href="mailto: Audio&lt;dave@audio.com&gt;">Contact</a>
+                <a class="btn btn-link" href="mailto: Audio&lt;conbo104@gmail.com&gt;">Contact</a>
                 <p>Copyright © <!-- -->2024<!-- -->. All Rights Reserved.</p>
             </div>
         </div>
