--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         crossorigin="anonymous" data-next-font="size-adjust" />
     <link rel="preload" href="./css/style-1.css" as="style" />
     <link rel="stylesheet" href="./css/style-1.css" data-n-g="" />
+<!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-analytics.js"></script>
